# upscanner

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  params.json  pyproject.toml  setup.py
scanner/: app.py  models.py
tests/: test_scanner.py
